--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,14 @@
+#theme: just-the-docs
 remote_theme: pmarsceill/just-the-docs
-# theme: just-the-docs
 logo: "hyperledger-logo.png"
 url: "https://tsc.hyperledger.org"
-search_enabled: false
 footer_content: "<a href=\"https://github.com/hyperledger/tsc\">Page generated from TSC repo on GitHub</a>"
+aux_links:
+  "About":
+    - "//www.hyperledger.org/about/leadership#tsc"
+  "GitHub":
+    - "//github.com/hyperledger/tsc"
+  "Wiki":
+    - "//wiki.hyperledger.org/display/TSC/Technical+Steering+Committee+Home"
+  "Chat":
+    - "https://chat.hyperledger.org/channel/tsc"
