Developer debug files via docker
Signed-off-by: S m, Aruna <arun.s.m.cse@gmail.com>

--- a/_config.yml
+++ b/_config.yml
@@ -12,3 +12,5 @@ aux_links:
     - "//wiki.hyperledger.org/display/TSC/Technical+Steering+Committee+Home"
   "Chat":
     - "https://chat.hyperledger.org/channel/tsc"
+plugins:
+  - jekyll-remote-theme
