--- a/.github/workflows/quarterly-report-reminders.yaml
+++ b/.github/workflows/quarterly-report-reminders.yaml
@@ -16,5 +16,5 @@ jobs:
       - name: GitHub Issue Schedule
         uses: hyperledger-tooling/github-issue-schedule@1.1
         env:
-          GITHUB_TOKEN: "${{ secrets.PAT }}"
+          GITHUB_TOKEN: "${{ secrets.TOC_ISSUES }}"
           CONFIG_FILE: ./.github/configs/quarterly-report-reminder.yaml
