--- a/.github/workflows/label.yaml
+++ b/.github/workflows/label.yaml
@@ -1,16 +1,22 @@
 name: "Pull Request Labeler"
 
 on:
-  pull_request:
+  pull_request_target:
   workflow_dispatch:
 
 jobs:
   labeler:
     name: Label PRs
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
     steps:
       - name: Labeler
         uses: actions/labeler@v4
+        env:
+          TOC_ISSUES: "${{ secrets.TOC_ISSUES }}"
         with:
           configuration-path: .github/labeler.yaml
-          repo-token: "${{ secrets.GITHUB_TOKEN }}"
+          repo-token: "${{ secrets.TOC_ISSUES }}"
