--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,1 +1,2 @@
-* @hyperledger/toc
+meeting-minutes/* @hyperledger/toc
+project-reports/* @tkuhrt @VRamakrishna @arsulegai @denyeart @jimthematrix @mbrandenburger @non-fungible-nelson @petermetz @swcurran @yacovm
