build(devcontainer): enable local development via jekyll serve
1. Added a VSCode dev container definition that contains Ruby and Jekyll
2. Declared the gem dependencies so that `bundle install` can be used to
install the build dependencies which then enable `jekyll serve` to locally
host and render the themed version of the TOC website.
3. This will unlock easier modification to the theme which is a pre-condition
of being able to debug CSS/theme/styling changes such as the width issues
I discovered recently on the new project dashboard page where the last few
columns are cut off from the view.

Signed-off-by: Peter Somogyvari <peter.somogyvari@accenture.com>

--- a/_config.yml
+++ b/_config.yml
@@ -18,3 +18,5 @@ aux_links:
     - "//wiki.hyperledger.org/display/TSC/Technical+Oversight+Committee+Home"
   "Chat":
     - "https://discord.gg/hyperledger/"
+plugins:
+  - jekyll-remote-theme
