--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
-meeting-minutes/* @hyperledger/toc
-project-reports/* @tkuhrt @VRamakrishna @arsulegai @denyeart @jimthematrix @mbrandenburger @non-fungible-nelson @petermetz @swcurran @yacovm
+meeting-minutes/ @hyperledger/toc
+project-reports/ @tkuhrt @VRamakrishna @arsulegai @denyeart @jimthematrix @mbrandenburger @non-fungible-nelson @petermetz @swcurran @yacovm
