update for LFDT
Signed-off-by: Tracy A. Kuhrt <tracy.a.kuhrt@accenture.com>

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 #theme: just-the-docs
-title: "Hyperledger TOC"
+title: "LF Decentralized Trust TAC"
 show_downloads: "false"
 has_children: true
 has_toc: true
