update for LFDT (TOC->TAC)
Signed-off-by: Tracy A. Kuhrt <tracy.a.kuhrt@accenture.com>

--- a/.github/workflows/quarterly-report-reminders - on demand.yaml
+++ b/.github/workflows/quarterly-report-reminders - on demand.yaml
@@ -23,5 +23,5 @@ jobs:
       - name: GitHub Issue Schedule
         uses: hyperledger-tooling/github-issue-schedule@1.2
         env:
-          GITHUB_TOKEN: "${{ secrets.TOC_ISSUES }}"
+          GITHUB_TOKEN: "${{ secrets.TAC_ISSUES }}"
           CONFIG_FILE: ./.github/configs/quarterly-report-reminder.yaml
