--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -1,2 +1,2 @@
 meeting-minutes/ @hyperledger/toc
-project-reports/ @tkuhrt @VRamakrishna @arsulegai @denyeart @jimthematrix @mbrandenburger @non-fungible-nelson @petermetz @swcurran @yacovm
+project-reports/ @VRamakrishna @arsulegai @conor10 @denyeart @jimthematrix @mbrandenburger @non-fungible-nelson @petermetz @swcurran @tkuhrt @yacovm
